k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bulbul-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bulbul
  template:
    metadata:
      labels:
        app: bulbul
    spec:
      containers:
      - name: bulbul
        image: your-dockerhub-username/bulbul_app:latest
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: bulbul-service
spec:
  selector:
    app: bulbul
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: LoadBalancer
