ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bulbul-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: demo.bulbulstream.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bulbul-service
            port:
              number: 80
